// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@handl/request-parser when a mutation with an input type variable is passed in then the parser should return the query with the input type variable embedded in it 1`] = `
"mutation {
  addStar(input: {clientMutationId: \\"1\\", starrableId: \\"MDEwOlJlcG9zaXRvcnkxMDA0NTUxNDg=\\"}) {
    clientMutationId
    starrable {
      viewerHasStarred
      ... on Repository {
        stargazers(first: 6) {
          edges {
            node {
              name
              login
              id
            }
          }
        }
        id
      }
      __typename
    }
  }
}
"
`;

exports[`@handl/request-parser when a mutation with an input type variable is passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "mutation.addStar" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "AddStarPayload",
    },
    "mutation.addStar.starrable" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": true,
      "isUnion": false,
      "possibleTypes": Array [
        Object {
          "isEntity": true,
          "typeName": "Repository",
        },
        Object {
          "isEntity": true,
          "typeName": "Topic",
        },
        Object {
          "isEntity": true,
          "typeName": "Gist",
        },
      ],
      "typeIDValue": undefined,
      "typeName": "Starrable",
    },
    "mutation.addStar.starrable.stargazers" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "StargazerConnection",
    },
    "mutation.addStar.starrable.stargazers.edges" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "StargazerEdge",
    },
    "mutation.addStar.starrable.stargazers.edges.node" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "User",
    },
  },
  "handlID": "123456789",
  "operation": "mutation",
  "operationName": "",
  "queryFiltered": false,
  "request": "",
}
`;

exports[`@handl/request-parser when a query with a directive is passed in then the parser should return the query with the directive retained 1`] = `
"{
  organization(login: \\"facebook\\") {
    description
    email
    login
    name
    repositories(first: 6) @include(if: true) {
      edges {
        node {
          description
          homepageUrl
          name
          owner {
            login
            url
            ... on Organization {
              name
              id
            }
            __typename
          }
          id
        }
      }
    }
    url
    id
  }
}
"
`;

exports[`@handl/request-parser when a query with a directive is passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "query.organization" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Organization",
    },
    "query.organization.repositories" => Object {
      "hasArguments": true,
      "hasDirectives": true,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "RepositoryConnection",
    },
    "query.organization.repositories.edges" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "RepositoryEdge",
    },
    "query.organization.repositories.edges.node" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Repository",
    },
    "query.organization.repositories.edges.node.owner" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": true,
      "isUnion": false,
      "possibleTypes": Array [
        Object {
          "isEntity": true,
          "typeName": "Organization",
        },
        Object {
          "isEntity": true,
          "typeName": "User",
        },
      ],
      "typeIDValue": undefined,
      "typeName": "RepositoryOwner",
    },
  },
  "handlID": "123456789",
  "operation": "query",
  "operationName": "",
  "queryFiltered": false,
  "request": "",
}
`;

exports[`@handl/request-parser when a query with a fragment option is passed in then the parser should return the query with the fragment option embedded in it 1`] = `
"{
  organization(login: \\"facebook\\") {
    description
    email
    login
    name
    url
    id
  }
}
"
`;

exports[`@handl/request-parser when a query with a fragment option is passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "query.organization" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Organization",
    },
  },
  "handlID": "123456789",
  "operation": "query",
  "operationName": "",
  "queryFiltered": false,
  "request": "",
}
`;

exports[`@handl/request-parser when a query with a fragment spread is passed in then the parser should return the query with the fragment spread embedded in it 1`] = `
"{
  organization(login: \\"facebook\\") {
    description
    email
    login
    name
    url
    id
  }
}
"
`;

exports[`@handl/request-parser when a query with a fragment spread is passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "query.organization" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Organization",
    },
  },
  "handlID": "123456789",
  "operation": "query",
  "operationName": "",
  "queryFiltered": false,
  "request": "",
}
`;

exports[`@handl/request-parser when a query with a variable is passed in then the parser should return the query with the variable embedded in it 1`] = `
"{
  organization(login: \\"facebook\\") {
    description
    email
    login
    name
    url
    id
  }
}
"
`;

exports[`@handl/request-parser when a query with a variable is passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "query.organization" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Organization",
    },
  },
  "handlID": "123456789",
  "operation": "query",
  "operationName": "",
  "queryFiltered": false,
  "request": "",
}
`;

exports[`@handl/request-parser when a query with an enum variable is passed in then the parser should return the query with the enum variable embedded in it 1`] = `
"{
  organization(login: \\"facebook\\") {
    description
    email
    login
    name
    repositories(first: 6, ownerAffiliations: [OWNER, COLLABORATOR]) {
      edges {
        node {
          description
          homepageUrl
          name
          owner {
            login
            url
            ... on Organization {
              name
              id
            }
            __typename
          }
          id
        }
      }
    }
    url
    id
  }
}
"
`;

exports[`@handl/request-parser when a query with an enum variable is passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "query.organization" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Organization",
    },
    "query.organization.repositories" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "RepositoryConnection",
    },
    "query.organization.repositories.edges" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "RepositoryEdge",
    },
    "query.organization.repositories.edges.node" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Repository",
    },
    "query.organization.repositories.edges.node.owner" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": true,
      "isUnion": false,
      "possibleTypes": Array [
        Object {
          "isEntity": true,
          "typeName": "Organization",
        },
        Object {
          "isEntity": true,
          "typeName": "User",
        },
      ],
      "typeIDValue": undefined,
      "typeName": "RepositoryOwner",
    },
  },
  "handlID": "123456789",
  "operation": "query",
  "operationName": "",
  "queryFiltered": false,
  "request": "",
}
`;

exports[`@handl/request-parser when a query with an inline fragment is passed in then the parser should return the query with the inline fragment embedded in it 1`] = `
"{
  organization(login: \\"facebook\\") {
    description
    email
    login
    name
    url
    id
  }
}
"
`;

exports[`@handl/request-parser when a query with an inline fragment is passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "query.organization" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Organization",
    },
  },
  "handlID": "123456789",
  "operation": "query",
  "operationName": "",
  "queryFiltered": false,
  "request": "",
}
`;

exports[`@handl/request-parser when a query with an operation name is passed in then the parser should return the query with the operation name retained 1`] = `
"query GetOrganization {
  organization(login: \\"facebook\\") {
    description
    email
    login
    name
    url
    id
  }
}
"
`;

exports[`@handl/request-parser when a query with an operation name is passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "query.organization" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Organization",
    },
  },
  "handlID": "123456789",
  "operation": "query",
  "operationName": "GetOrganization",
  "queryFiltered": false,
  "request": "",
}
`;

exports[`@handl/request-parser when a query with inline fragments for a union type are passed in then the parser should return the query with the inline fragments retained 1`] = `
"{
  search(query: \\"react\\", first: 10, type: REPOSITORY) {
    edges {
      node {
        ... on Organization {
          description
          login
          organizationName: name
          id
        }
        ... on Issue {
          bodyText
          number
          title
          id
        }
        ... on MarketplaceListing {
          slug
          shortDescription
          howItWorks
          id
        }
        ... on PullRequest {
          bodyText
          number
          title
          id
        }
        ... on Repository {
          description
          homepageUrl
          name
          id
        }
        __typename
      }
    }
  }
}
"
`;

exports[`@handl/request-parser when a query with inline fragments for a union type are passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "query.search" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "SearchResultItemConnection",
    },
    "query.search.edges" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "SearchResultItemEdge",
    },
    "query.search.edges.node" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": true,
      "possibleTypes": Array [
        Object {
          "isEntity": true,
          "typeName": "Issue",
        },
        Object {
          "isEntity": true,
          "typeName": "PullRequest",
        },
        Object {
          "isEntity": true,
          "typeName": "Repository",
        },
        Object {
          "isEntity": true,
          "typeName": "User",
        },
        Object {
          "isEntity": true,
          "typeName": "Organization",
        },
        Object {
          "isEntity": true,
          "typeName": "MarketplaceListing",
        },
      ],
      "typeIDValue": undefined,
      "typeName": "SearchResultItem",
    },
  },
  "handlID": "123456789",
  "operation": "query",
  "operationName": "",
  "queryFiltered": false,
  "request": "",
}
`;

exports[`@handl/request-parser when a query with multiple variables are passed in then the parser should return the query with the variables embedded in it 1`] = `
"{
  organization(login: \\"facebook\\") {
    description
    email
    login
    name
    repositories(first: 6) {
      edges {
        node {
          description
          homepageUrl
          name
          owner {
            login
            url
            ... on Organization {
              name
              id
            }
            __typename
          }
          id
        }
      }
    }
    url
    id
  }
}
"
`;

exports[`@handl/request-parser when a query with multiple variables are passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "query.organization" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Organization",
    },
    "query.organization.repositories" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "RepositoryConnection",
    },
    "query.organization.repositories.edges" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": false,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "RepositoryEdge",
    },
    "query.organization.repositories.edges.node" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Repository",
    },
    "query.organization.repositories.edges.node.owner" => Object {
      "hasArguments": false,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": true,
      "isUnion": false,
      "possibleTypes": Array [
        Object {
          "isEntity": true,
          "typeName": "Organization",
        },
        Object {
          "isEntity": true,
          "typeName": "User",
        },
      ],
      "typeIDValue": undefined,
      "typeName": "RepositoryOwner",
    },
  },
  "handlID": "123456789",
  "operation": "query",
  "operationName": "",
  "queryFiltered": false,
  "request": "",
}
`;

exports[`@handl/request-parser when a query without a variable is passed in then the parser should return the query unchanged 1`] = `
"{
  organization(login: \\"facebook\\") {
    description
    email
    login
    name
    url
    id
  }
}
"
`;

exports[`@handl/request-parser when a query without a variable is passed in then the parser should update the request context with the correct data 1`] = `
Object {
  "debugManager": null,
  "fieldTypeMap": Map {
    "query.organization" => Object {
      "hasArguments": true,
      "hasDirectives": false,
      "isEntity": true,
      "isInterface": false,
      "isUnion": false,
      "possibleTypes": Array [],
      "typeIDValue": undefined,
      "typeName": "Organization",
    },
  },
  "handlID": "123456789",
  "operation": "query",
  "operationName": "",
  "queryFiltered": false,
  "request": "",
}
`;
